<?xml version="1.0"?>
<package format="2">
  <name>ros_topic</name>
  <version>0.0.0</version>
  <description>The ros_topic package</description>
  <maintainer email="conner.jeong@gmail.com">uga</maintainer>
  <license>MIT</license>
  <author email="conner.jeong@gmail.com">Conner Jeong</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_gen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>message_gen</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_gen</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
